# cpp_smartpointers

./: .gitignore  CMakeLists.txt  Person.cpp  README.md  ResourceEx.h  SmartPointers.pro  main.cpp
src/: Person.h  ResourceEx.cpp
